--- a/force-app/main/default/lwc/lwcUtilitySpinner/lwcUtilitySpinner.html
+++ b/force-app/main/default/lwc/lwcUtilitySpinner/lwcUtilitySpinner.html
@@ -1,3 +1,3 @@
 <template>
-    <lightning-spinner if:true={isLoading} alternative-text={alternativeText} size={size}></lightning-spinner>
+    <lightning-spinner if:true={isLoading} alternative-text={alternativeText} size={size} variant={variant}></lightning-spinner>
 </template>
